make it easier to view selftext on mobile - fix issue with <pre> tag: ref post id ip0xpx

--- a/src/sass/thread.sass
+++ b/src/sass/thread.sass
@@ -1,5 +1,6 @@
 .thread
   display: flex
+  flex-wrap: wrap
   flex-grow: 1
   margin-bottom: 7px
   border-radius: 1px
@@ -95,7 +96,7 @@
   .thread-selftext
     border: 1px solid #666
     border-radius: 7px
-    margin: 5px 0 7px
+    margin: 5px 10px 7px
     padding: 5px 10px
     max-width: 840px
     color: #ddd
